step size fixed

--- a/App WatchKit App/Base.lproj/Interface.storyboard
+++ b/App WatchKit App/Base.lproj/Interface.storyboard
@@ -16,12 +16,12 @@
 Tomás</string>
                         </label>
                         <label width="136" height="26" alignment="left" text="Label" textAlignment="center" id="bKw-N6-l33"/>
-                        <slider width="1" alignment="left" value="35" minimum="35" maximum="70" steps="5" id="H9H-O0-sLB">
+                        <slider width="1" alignment="left" continuous="YES" value="35" minimum="35" maximum="70" steps="7" id="H9H-O0-sLB">
                             <connections>
                                 <action selector="sliderAction:" destination="AgC-eL-Hgc" id="dbL-dQ-8ji"/>
                             </connections>
                         </slider>
-                        <label width="136" height="26" alignment="left" text="Val" textAlignment="center" id="GSe-O2-Ssk"/>
+                        <label width="136" height="26" alignment="left" text="35" textAlignment="center" id="GSe-O2-Ssk"/>
                     </items>
                     <connections>
                         <outlet property="rssiVal" destination="GSe-O2-Ssk" id="FJK-An-WjU"/>
